--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" style="background: #009ea2;">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>hisense</title>
-  </head>
-  <body style="background-image: url('./bg.png');background-size: 100%;background-repeat: no-repeat;">
-    <noscript>
-      <strong>We're sorry but hisense doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>hisense</title>
+</head>
+
+<body style="background-image: url('./bg.png');background-size: 100%;background-repeat: no-repeat;">
+  <noscript>
+    <strong>We're sorry but hisense doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <% if(htmlWebpackPlugin.options.cdn == 'prod'){ %>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+  <% } %>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
